cmake_minimum_required(VERSION 2.6)
project(common_serial_ocem)
#     -DOCEM_CORE_DEBUG -DOCEM_PROTOCOL_DEBUG
ADD_DEFINITIONS( -DOCEM_PROTOCOL_BUFFER_DEBUG )

FILE(GLOB src *.cpp)    

ADD_LIBRARY(${PROJECT_NAME} STATIC ${src} )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} common_serial common_debug )
ADD_EXECUTABLE(ocem_protocol_test test/ocem_protocol_test.cpp)
TARGET_LINK_LIBRARIES(ocem_protocol_test ${PROJECT_NAME} common_debug ${chaoslib})


FILE(GLOB ocem_src *.h)    
 

INSTALL(FILES ${ocem_src} DESTINATION include/common/serial/models/Ocem ) 
#INSTALL_TARGETS(/lib ${PROJECT_NAME})
INSTALL(TARGETS ${PROJECT_NAME}
        DESTINATION "lib"
        PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
IF(NOT BUILD_FORCE_STATIC)
  #INSTALL_TARGETS(/bin/serial ocem_protocol_test)
  INSTALL(TARGETS ocem_protocol_test
        DESTINATION "bin/serial"
        PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
ENDIF()
